# cyberwatch_api

./: .gitignore  LICENSE  README.md  api.conf  cyberwatch_api.py  example.py  pyproject.toml  setup.py
.github/workflows/: release.yml  ruff_lint.yml
cbw_cli/: cyberwatch_cli.py
cli/: README.md  cyberwatch-cli  cyberwatch-cli.py
examples/: add_windows_os_to_rules_of_repository.py  change_asset_group_from_hostname.py  create_agentless_ssh_ed25519_key.py  create_agentless_ssh_password.py  create_agentless_ssh_rsa_key.py  create_agentless_winrm_negociate.py  cve_code_to_cvss.py  cve_resolution_time.py  hostname_to_cvss_vector.py  mean_cve_resolution_time_per_year.py  remove_assets_based_on_last_communication.py  remove_duplicated_assets.py  retrieve_assets_with_kb_patch_available.py  retrieve_high_priorities_cve.py  retrieve_priorized_cve_during_the_past_x_days.py  retrieve_top-10-cve_kb-to-patch_os-obsolete_cve-discovered_cve-patched.py  send_asset_patches_via_email.py
examples/nessus_integration/: README.md  cbw_helper.py  main.py
examples/new_high_priority_cve/: retrieve_high_priorities_cve.py
examples/two_instance_sync/: README.md  sync_assets.py
